Added integration test infrastructure (and a few tests). int tests are only run when you use the integration profile, and don't require backend services to be running.